3 columns per page, add highlight play icon, fix spacing and width

--- a/mikes-site/src/index.css
+++ b/mikes-site/src/index.css
@@ -75,3 +75,15 @@ code {
   max-width: 100%;
   height: auto; 
 }
+
+.icon-wrap {
+  top: 30%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+.icon-wrap :hover {
+  color: #fff;
+  background-color: rgb(255, 255, 255);
+}
